--- a/.github/workflows/exec_test.yml
+++ b/.github/workflows/exec_test.yml
@@ -26,8 +26,10 @@ jobs:
   exec_deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: [exec_testing]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: host-output-deploy
         run: echo "Hello Deploy"
+        
