--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ name: zircon-exec-testing
 env:
   EB_PACKAGE_S3_BUCKET_NAME : "zircon-exec-packages"
   EB_APPLICATION_NAME       : "zirconFlask"
-  EB_ENVIRONMENT_NAME       : "Zirconflask-env"
+  EB_ENVIRONMENT_NAME       : "zirconflask-env"
   DEPLOY_PACKAGE_NAME       : "zircon_artifact_${{ github.sha }}.zip"
   AWS_REGION_NAME           : "eu-central-1"
 
